--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="web/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="web/abilities.html">Abilities</a>
+        <a class="nav-link" href="abilities.html">Abilities</a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="web/events.html">Events</a>
+        <a class="nav-link" href="events.html">Events</a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="web/contact.html">Contact Us</a>
+        <a class="nav-link" href="contact.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
