--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="file:///C:/Users/ADITHYA/Desktop/HTML%20TASK/htmltask.html">
+  <a class="navbar-brand" href="index.html">
     <img src="1.png" width="30" height="30" class="d-inline-block align-top" alt="">
     Wonder Events
   </a>
