--- a/abilities.html
+++ b/abilities.html
@@ -7,7 +7,7 @@
 <body style="background-image:url('11.jpeg')">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="file:///C:/Users/ADITHYA/Desktop/HTML%20TASK/htmltask.html">
+  <a class="navbar-brand" href="index.html">
     <img src="1.png" width="30" height="30" class="d-inline-block align-top" alt="">
     Wonder Events
   </a>
@@ -18,16 +18,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="file:///C:/Users/ADITHYA/Desktop/Final/index.html">Home</a>
+        <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="file:///C:/Users/ADITHYA/Desktop/Final/abilities.html">Abilities<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="abilities.html">Abilities<span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-       <a class="nav-link" href="file:///C:/Users/ADITHYA/Desktop/Final/events.html">Events</a>
+       <a class="nav-link" href="events.html">Events</a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="file:///C:/Users/ADITHYA/Desktop/Final/contact.html">Contact Us</a>
+        <a class="nav-link" href="contact.html">Contact Us</a>
       </li>
       
     </ul>
